[package]
name = "uci-parser"
version = "0.1.0"
edition = "2021"
authors = ["Danny Hammer <hammerapi@gmail.com>"]
license = "MPL-2.0"
description = "Universal Chess Interface parser"
repository = "https://github.com/dannyhammer/uci-parser"
homepage = "https://github.com/dannyhammer/uci-parser"
keywords = ["chess", "chess parser", "universal chess interface", "uci", "parser", "uci parser"]

[dependencies]
nom = "7.1.3"

[features]
parse-go-perft = []
parse-bench = []
parse-position-kiwipete = []
validate-promotion-moves = []
clamp-negatives = []
err-on-unused-input = []
types = []